    Seconded: Dominic Hargreaves <dom@earth.li>
    Seconded: Javier Fernández-Sanguino Peña <jfs@computer.org>
    Closes: #609162
  * Policy: Document issues with conflicting packages sharing a conffile
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Cyril Brulebois <kibi@debian.org>
    Seconded: Raphaël Hertzog <hertzog@debian.org>
    Closes: #23712
  * Consistently use "Debian source control file" for *.dsc files and
    "Source package control file" for debian/control files.  Patch from
    Charles Plessy.  (Closes: #626796)
  * Clarify that continuation lines of the Description control field must
    contain at least one non-whitespace character.  Thanks, Guillem Jover.
    (Closes: #627490)
  * Fix the example of creating a /usr/local subdirectory to not fail if
    the chown or chmod fail.  Thanks, Joey Hess.  (Closes: #617315)
  * Clarify the requirements for symlinks from inside one top-level
    directory to another and add examples and a rationale.  Thanks,
    Carsten Hey.  (Closes: #626338)
  * Clarify that Perl Policy 2.4 is for packages built from the perl
    source package and the manual page extensions are different for
    separate module packages.  Thanks, Steve Langasek.  (Closes: #643690)
  * Say that packages in main may also not recommend packages in non-free,
    bringing the main text in line with the list of fields and in line
    with the long-standing release goal.  (Closes: #646166)
  * Resynchronize the archive section list with ftp-master, adding
    education, introspection, and metapackages.  Patch from Charles
    Plessy.  (Closes: #651020)
  * Add the release date of 3.9.2.0 to upgrading-checklist.
  * Fix ordering of the last entries in the 3.9.2.0 upgrading-checklist.
  * Fix typo in upgrading-checklist entry for multiarch paths.  Thanks,
    Michael Dorrington.  (Closes: #626408)
  * Add id tags for each version entry in upgrading-checklist so that,