@@ -6,7 +6,6 @@
 /debconf_spec/debconf_specification.txt.gz
 /head.tmp
 /menu-policy.html/
-/mime-policy.html/
 /perl-policy.html/
 /policy.html/
 /stamp-build
