@@ -141,7 +141,6 @@ In addition to the main technical manual, the team currently also maintains:
 + [[http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/][Machine-readable debian/copyright format]]
 + [[http://www.debian.org/doc/packaging-manuals/menu-policy/][Debian Menu sub-policy]]
 + [[http://www.debian.org/doc/packaging-manuals/perl-policy/][Debian Perl Policy]]
-+ [[http://www.debian.org/doc/packaging-manuals/mime-policy/][Debian MIME support sub-policy]]
 + [[http://www.debian.org/doc/packaging-manuals/debconf_specification.html][Debconf Specification]]
 + [[http://www.debian.org/doc/packaging-manuals/virtual-package-names-list.txt][Authoritative list of virtual package names ]]
 
