@@ -1,18 +1,0 @@
-Document: debian-mime-policy
-Title: Debian MIME Policy Manual
-Author: The Debian Policy Mailing list
-Abstract: This manual describes the policy requirements for the MIME
- system in the Debian distribution, describing the rules
- regulating the registration of programs that can handle MIME
- content.
-Section: Debian
-
-Format: debiandoc-sgml
-Files: /usr/share/doc/debian-policy/mime-policy.sgml.gz
-
-Format: text
-Files: /usr/share/doc/debian-policy/mime-policy.txt.gz
-
-Format: HTML
-Index: /usr/share/doc/debian-policy/mime-policy.html/index.html
-Files: /usr/share/doc/debian-policy/mime-policy.html/*.html
