@@ -32,9 +32,9 @@ LIBDIR	  := $(TMPTOP)/usr/share/doc-base
 
 sanitycheck := debian/rules policy.sgml
 
-SGML_FILES := policy menu-policy mime-policy perl-policy upgrading-checklist
-DESC_FILES := copyright-format debian-policy debian-menu-policy debian-perl-policy \
-              debian-mime-policy debconf-spec fhs
+SGML_FILES := policy menu-policy perl-policy upgrading-checklist
+DESC_FILES := copyright-format debian-policy debian-menu-policy \
+	      debian-perl-policy debconf-spec fhs
 
 # While we have two versions of the FHS installed in the source package,
 # we need to modify this to handle it.  This is the easiest way to do it.
