@@ -1,149 +1,0 @@
-<!doctype debiandoc system [
-<!-- include version information so we don't have to hard code it
-     within the document -->
-<!entity % versiondata SYSTEM "version.ent"> %versiondata;
-]>
-<debiandoc>
-  <!--
-  Debian Menu Sub-Policy Manual.
-  Copyright (C)1999 ;
-
-  released under the terms of the GNU General Public License, version
-  2 or (at your option) any later.
-
-  The debian-policy mailing list has taken responsibility for the
-  contents of this document, with the package maintainers responsible
-  for packaging adminstrivia only.  
- 
-  -->
-  
-  <book>
-    <titlepag>
-      <title>The Debian MIME support sub-policy</title>
-      <author>
-	<name>J.H.M. Dassen (Ray)</name>
-	<email>jdassen@debian.org</email>
-      </author>
-      <author>
-	<name>The Debian Policy mailing List</name>
-	<email>debian-policy@lists.debian.org</email>
-      </author>
-      <version>version &version;, &date;</version>
-
-      <abstract>
-	This manual describes the policy requirements for the MIME support
-	system used in the Debian distribution. This
-	document is part of the policy package for Debian. The policy
-	package itself is maintained by a group of maintainers that
-	have no editorial powers. At the moment, the list of
-	maintainers is:
-	<enumlist>
-	  <item>
-	    <p>Julian Gilbey <email>J.D.Gilbey@qmw.ac.uk</email></p>
-	  </item>
-	  <item>
-	    <p>Manoj Srivastava <email>srivasta@debian.org</email></p>
-	  </item>
-	</enumlist>
-      </abstract>
-
-
-      <copyright>
-	<copyrightsummary>
-	  Copyright &copy;1999 .
-	</copyrightsummary>
-	<p>
-	  This manual is free software; you may redistribute it and/or
-	  modify it under the terms of the GNU General Public License
-	  as published by the Free Software Foundation; either version
-	  2, or (at your option) any later version.
-	</p>
-
-	<p>
-	  This is distributed in the hope that it will be useful, but
-	  <em>without any warranty</em>; without even the implied
-	  warranty of merchantability or fitness for a particular
-	  purpose.  See the GNU General Public License for more
-	  details.
-	  </p>
-	<p>
-	  A copy of the GNU General Public License is available as
-	  <tt>/usr/share/common-licenses/GPL</tt> in the Debian
-	  distribution or on the World Wide Web at <url
-	  id="http://www.gnu.org/copyleft/gpl.html" name="The GNU
-	  General Public Licence">. You can also obtain it by writing
-	  to the Free Software Foundation, Inc., 51 Franklin St, Fifth
-	  Floor, Boston, MA 02110-1301, USA.
-	</p>
-      </copyright>
-    </titlepag>
-
-    <toc detail="sect">
-
-    <chapt>
-      <heading>About this document</heading>
-      <p>
-	This document is distributed as the <tt>mime-policy</tt> files
-	in the Debian package
-        <package><url name="debian-policy" id="http://packages.debian.org/debian-policy"></package>.
-	It is also available from the Debian web mirrors at
-	<tt><url name="/doc/packaging-manuals/mime-policy/"
-		id="http://www.debian.org/doc/packaging-manuals/mime-policy/"></tt>.
-      </p>
-    </chapt>
-
-    <chapt>
-      <heading>MIME support mechanism</heading>
-      <p>
-	If you need assistance implementing this sub-policy, please
-	please ask for it on the debian-devel mailing list.  If you
-	have proposals for changes or additions to this sub-policy,
-	please bring it up on debian-policy.
-      </p>
-      <sect>
-        <heading>Background</heading>
-        <p>
-          MIME (Multipurpose Internet Mail Extensions, RFC 1521) is
-          a mechanism for encoding files and datastreams and providing
-          meta-information about them, in particular their type (e.g. audio
-          or video) and format (e.g. PNG, HTML, MP3).
-        </p>
-        
-        <p>
-          Registration of MIME type handlers allows programs like mail
-          user agents and web browsers to to invoke these handlers to
-          view, edit or display MIME types they don't support directly.
-        </p>
-
-      </sect>
-
-      <sect>
-	<heading>MIME support implementation</heading>
-	<p>
-          The <package>mime-support</package> package provides the
-          <prgn>update-mime</prgn> program which allows packages to
-          register programs that can show, compose, edit or print
-          MIME types.
-	</p>
-
-	<p>
-          Packages containing such programs must register them
-          with <prgn>update-mime</prgn> as documented in <manref
-          name="update-mime" section="8">. They should <em>not</em> depend
-          on, recommend, or suggest <prgn>mime-support</prgn>. Instead,
-          they should just put something like the following in the
-          <tt>postinst</tt> and <tt>postrm</tt> scripts:
-
-          <example> 
-  if [ -x /usr/sbin/update-mime ]; then
-      update-mime
-  fi
-          </example>
-	</p>
-      </sect>
-    </chapt>
-  </book>
-</debiandoc>
-<!-- Local variables: -->
-<!-- indent-tabs-mode: t -->
-<!-- End: -->
